# edoreczenia

./: .gitignore  Makefile  README.md  app.py  models.py  pyproject.toml  start-all.sh  stop-all.sh  test_e2e.py  test_integration.py  test_sync.py
docs/: uaapi_3.0.8.1.yaml
edoreczenia-dsl/: .gitignore  Dockerfile  Makefile  README.md  build.gradle  docker-compose.yml
edoreczenia-dsl/python-client/: __init__.py  config.py  logger.py
edoreczenia-dsl/python_client/: client.py  run_tests.py  scenarios.py
edoreczenia-dsl/routes/: edoreczenia.groovy  receive-messages.groovy  send-document.groovy  test-dsl.groovy  test-dsl.py
edoreczenia-middleware-sync/: .env.example  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml
edoreczenia-middleware-sync/dovecot/: Dockerfile
edoreczenia-middleware-sync/simulator/: Dockerfile
edoreczenia-middleware-sync/src/edoreczenia_sync/: imap_client.py  main.py  sync_engine.py
edoreczenia-middleware-sync/tests/: test_sync.py
edoreczenia-proxy-imap-smtp/: .env.example  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml
edoreczenia-proxy-imap-smtp/simulator/: app.py
edoreczenia-proxy-imap-smtp/src/edoreczenia_proxy/: __init__.py  api_client.py  config.py  imap_server.py  main.py  smtp_server.py
edoreczenia-proxy-imap-smtp/tests/: test_proxy.py
edoreczenia-saas/: GUIDE.md  Makefile  README.md  docker-compose.yml
edoreczenia-saas/backend/: Dockerfile  requirements.txt
edoreczenia-saas/backend/app/: database.py  main.py
edoreczenia-saas/cli/: edoreczenia  edoreczenia-cli.py
edoreczenia-saas/examples/: 01_login.sh  04_get_message.sh  06_verify_integration.sh  07_complete_integration.sh  09_cqrs_stats.sh  11_full_demo.sh  20_connect_mailbox.sh  23_certificate_connect.sh  25_sync_mailbox.sh  26_list_mailboxes.sh  27_disconnect_mailbox.sh  README.md
edoreczenia-saas/frontend/: index.html
edoreczenia-saas/frontend/src/: App.jsx
idcard-pl/: .env.example  Makefile  README.md  docker-compose.yml
idcard-pl/backend/: Dockerfile  requirements.txt
idcard-pl/backend/app/: __init__.py  main.py
idcard-pl/cli/: idcard  idcard-cli.py
idcard-pl/examples/: 01_register.sh  02_login.sh  03_list_services.sh  04_connect_edoreczenia.sh  05_dashboard.sh  06_unified_inbox.sh  README.md
idcard-pl/frontend/: index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
idcard-pl/frontend/src/: App.jsx
idcard-pl/tests/: test_api.py
szyfromat-pl/: .env.example  Makefile  docker-compose.yml
szyfromat-pl/backend/: requirements.txt
szyfromat-pl/backend/app/: database.py  main.py
szyfromat-pl/cli/: szyfromat  szyfromat-cli.py
szyfromat-pl/connectors/: README.md  __init__.py
szyfromat-pl/connectors/ade/: __init__.py  connector.py
szyfromat-pl/examples/: 02_send_message.sh  03_list_messages.sh  05_create_integration.sh  08_list_integrations.sh  10_event_log.sh  21_oauth_connect.sh  22_mobywatel_connect.sh  24_apikey_connect.sh  README.md
szyfromat-pl/frontend/: nginx.conf  package.json  tailwind.config.js
szyfromat-pl/nextcloud/: README.md  docker-compose.yml
szyfromat-pl/tests/: test_api.py
tests/ui/: README.md  package.json  playwright.config.js  run_tests.sh
(+76 files in other folders)
